--- a/slogi.css
+++ b/slogi.css
@@ -45,9 +45,14 @@ html,body {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
-	justify-content: space-between;
-	align-items: flex-start;
-	}
+	justify-content: flex-start;
+	align-items: center;
+	list-style-type: none;
+	height: 30px;
+}
+#Navigacija li {
+	
+}
 #Vsebina {
 	background-color: green;
 	min-height: 350px;
