--- a/slogi.css
+++ b/slogi.css
@@ -1,6 +1,21 @@
+:root{
+	--modra: #739ad0;
+	--rjava: #6b3305;
+	--sr: #efe9e7;
+	--bela: #fff;
+	--crna: #000;
+	--obroba: 1px solid #ddd;
+	--rob: 20px;
+}
 html,body {
 	margin: 0;
 	padding: 0;
+	font-family: arial,tahoma, helvetica, sans-serif
+	font-size: 13px;
+	color: var(--crna);
+}
+body{
+	background: #f2f9fb url("./Grafika/ozadje.jpg") no-repeat center;
 }
 #ZgornjaPasica{
 	width: 950px;
@@ -13,11 +28,11 @@ html,body {
 }
 
 .Logo{
-	margin-left: 20px;
+	margin-left: var(--20px);
 }
 
 #FacebookTwitter{
-	margin-right: 20px;
+	margin-right: var(--20px);
 	display: flex;
 	flex-wrap: nowrap;
 	flex-direction: row;
@@ -42,8 +57,8 @@ html,body {
 	background-position: center bottom;
 	height: 200px;
 	width: 950px;
-	border-top-left-radius: 20px;
-	border-top-right-radius: 20px;
+	border-top-left-radius: var(--20px);
+	border-top-right-radius: var(--20px);
 }
 #Navigacija {
 	background: transparent url('./Grafika/navigacija.png') no-repeat center top;
@@ -68,7 +83,7 @@ html,body {
 	font-size: 14px;
 	font-weight: bold;
 	text-align: center;
-	color: white;
+	color: var(--bela);
 	text-decoration: none;
 	border-bottom: 0px;
 	padding: 7px 10px;
@@ -81,7 +96,6 @@ html,body {
 	transition: all 1s ease;
 }
 #Vsebina {
-	background-color: green;
 	min-height: 350px;
 	width: 950px;
 	display: flex;
@@ -91,19 +105,49 @@ html,body {
 	align-items: flex-start;
 }
 #Clanek {
-	background-color: yellow;
+	background-color: var(--bela);
+	padding: var(--20px);
+	box-sizing: border-box;
+	margin: 10px 10px 10px 0;
 	min-height: 350px;
 	width: 700px;
 }
 #Sorodno {
-	background-color: orange;
+	background-color: var(--sr);
+	padding: var(--20px);
+	border-radius: var(--20px);
+	margin: 10px 0;
+	box-sizing: border-box;
 	min-height:350px;
 	width: 250px;
 }
+h1{
+	font-size: 14px;
+	font-weight: bold;
+	color: var(--modra);
+	border-bottom: var(--obroba);
+}
+h2 {
+	font-size: 14px;
+	font-weight: bold;
+	color: var(--crna);
+	border-bottom: var(--obroba);
+}
+.SlikaVClanku {
+	float: right;
+	margin: 0 0 20px 20px;
+	box-shadow: 2px 2px 3px 2px rgba(51, 51, 51, .75);
+	transition: all 1s ease;
+}
+.SlikaVClanku hover{
+	box-shadow: 2px 2px 5px 4px rgba(51, 51, 51, .75)
+	transition: all .75 ease;
+	filter: contrast(150%);
+}
 #Noga {
-	background-image: linear-gradient(to bottom, #739ad0 0, #739ad0 10%, #fff 10%, #fff 15%, #6b3305 15%, #6b3305 100%);
+	background-image: linear-gradient(to bottom, var(--modra) 0, var(--modra) 10%, var(--bela) 10%, var(--bela) 15%, var(--rjava) 15%, var(--rjava) 100%);
 	background-repeat: repeat-x;
-	color: white;
+	color: var(--bela);
 	padding: 18px 0 0 12px;
 	margin-bottom: 45px;
 	box-sizing: border-box;
@@ -111,7 +155,7 @@ html,body {
 	width: 950px;
 }
 #Noga a{
-	color: white;
+	color: var(--bela);
 	text-decoration: none;
 }
 #Noga a:hover{
